Add repository configuration a package json

--- a/React/package.json
+++ b/React/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite":"lite-server"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maaferna/portfolio.git"
+  },
   "author": "Marco Parra",
   "license": "ISC",
   "dependencies": {},
